--- a/setup.cfg
+++ b/setup.cfg
@@ -14,4 +14,4 @@ exclude=.git,tests,.venv,build
 test = pytest
 
 [tool:pytest]
-addopts = --cov-report term --cov=flask_plugin -v -s
+addopts = --cov-report term --cov=flask_continuum -v -s
