--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -1,7 +1,7 @@
-codecov>=2.0.15
-pytest>=3.6.2
-pytest-cov>=2.7.1
-pytest-runner>=4.2
-Factory-Boy>=2.12.0
+codecov
+pytest
+pytest-cov
+pytest-runner
+Factory-Boy
 Flask-SQLAlchemy
 Flask-Migrate
